# FastTAK

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  README.md  certs.sh  docker-compose.dev.yml  docker-compose.direct.yml  docker-compose.test.yml  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml  reconfig.sh  setup.sh  start.sh  video-cot.sh
app-db/: start.sh
docs/: authentication.md  certificates.md  configuration.md  database-management.md  decisions.md  index.md  lightsail-deployment.md  nodered.md  quickstart-walkthrough.md  user-types.md
init-config/: Dockerfile  start.sh
init-identity/: Dockerfile  bootstrap.py  requirements.txt
init-ldap-ready/: Dockerfile  wait-for-ldap.sh
ldap-proxy/: Dockerfile  auth.go  go.mod  go.sum  health.go  main.go  proxy.go  proxy_test.go  ratelimit.go  ratelimit_test.go  server.go  tokens.go  tokens_api.go  tokens_api_test.go  tokens_test.go
mediamtx/: mediamtx.yml
monitor/: Dockerfile  requirements.txt
nodered/: flows.json  start.sh
scripts/: check-env.sh
tak-database/: start.sh
tak-portal/: start.sh
tak-server/: healthcheck.sh  register-api-cert.sh  start.sh
tests-integration/: conftest.py  test-down.sh  test-run.sh  test-setup.sh  test-stack.sh  test_audit_persistence.py  test_cert_management.py  test_cert_registration.py  test_channel_filter.py  test_group_enforcement.py  test_group_management.py  test_health_api.py  test_ldap_auth.py  test_rate_limit.py  test_reenrollment_prevention.py  test_service_account_admin.py  test_tak_proxies.py  (+4 more)
(+120 files in other folders)
