[project]
name = "fastak-dev"
version = "0.24.0"
requires-python = ">=3.12"

# Mirror of monitor/requirements.txt so tests can import monitor code.
# Docker image installs from requirements.txt directly; it never sees this file.
dependencies = [
    "fastapi~=0.135.0",
    "uvicorn[standard]~=0.42.0",
    "pydantic-settings~=2.13.0",
    "jinja2~=3.1.0",
    "docker~=7.1.0",
    "apscheduler~=3.11.0",
    "httpx~=0.28.0",
    "cryptography~=46.0.0",
    "psycopg[binary]~=3.2.0",
    "pyyaml~=6.0.0",
]

[dependency-groups]
dev = [
    "pytest~=8.3.0",
    "pytest-asyncio~=0.25.0",
    "pre-commit~=4.1.0",
    "ruff~=0.9.0",
    "pytest-dependency>=0.6.1",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: integration tests requiring a running Docker stack"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): v{version}"
allow_zero_version = true
major_on_zero = false
